@@ -4,7 +4,7 @@
 Note: This file contains only changes in the 'default' branch.
 
 
-2016-12-??
+2017-01-??
 
   - Created and test beancount.core.convert Posting and Position conversion
     functions.
@@ -22,6 +22,13 @@ Note: This file contains only changes in the 'default' branch.
 
   - Moved beancount.ops.prices to beancount.core.prices, and added a
     deprecation warning.
+
+
+2017-01-14
+
+  - Fixed bug with generation of example that would produce an incorrect initial
+    balance for banking accounts. The example test should have been broken. (No
+    idea why this wasn't deteted earlier, probably by chance.)
 
 
 2016-12-17
